<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/wallet_balance"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wallet_balance_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="₹500"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:indeterminateTint="@color/bg" />

            <TextView
                android:id="@+id/text_view_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center"
                android:padding="16dp"
                android:text="@string/wallet_balance"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/recharge"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet_balance">

        <ImageView
            android:id="@+id/recharge_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"
            android:src="@drawable/ic_recharge" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/scanner"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recharge"
        app:layout_constraintTop_toBottomOf="@+id/wallet_balance">

        <ImageView
            android:id="@+id/scanner_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"

            android:src="@drawable/ic_scanner" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/navigator"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/travel_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recharge_text">

        <ImageView
            android:id="@+id/navigator_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"

            android:src="@drawable/ic_navigation" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/travel_history"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/navigator"
        app:layout_constraintTop_toBottomOf="@+id/scanner_text">

        <ImageView
            android:id="@+id/travel_history_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"

            android:src="@drawable/ic_history" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recharge_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/recharge"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/recharge"
        app:layout_constraintStart_toStartOf="@+id/recharge"
        app:layout_constraintTop_toBottomOf="@+id/recharge" />

    <TextView
        android:id="@+id/scanner_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/scanner"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/scanner"
        app:layout_constraintStart_toStartOf="@+id/scanner"
        app:layout_constraintTop_toBottomOf="@+id/scanner" />

    <TextView
        android:id="@+id/navigator_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="TRAFFIC DENSITY"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/navigator"
        app:layout_constraintStart_toStartOf="@+id/navigator"
        app:layout_constraintTop_toBottomOf="@+id/navigator" />

    <TextView
        android:id="@+id/history_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/travelHistory"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/travel_history"
        app:layout_constraintStart_toStartOf="@+id/travel_history"
        app:layout_constraintTop_toBottomOf="@+id/travel_history" />

    <androidx.cardview.widget.CardView
        android:id="@+id/recommended_articles"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigator_text">

        <ImageView
            android:id="@+id/recommended_articles_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="24dp"

            android:src="@drawable/ic_history" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recommended_articles_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="ARTICLES"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/recommended_articles"
        app:layout_constraintStart_toStartOf="@+id/recommended_articles"
        app:layout_constraintTop_toBottomOf="@+id/recommended_articles" />
</androidx.constraintlayout.widget.ConstraintLayout>